[build-system]
requires = []

[tool.flit.metadata]
module = "calculator"
author = "Lukas Kazancevas"
author-email = "lukas.kazancevas@gmail.com"
home-page = "https://github.com/Kazanlu/Calculator_v2"
requires-python = ">=3.1"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]